--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "dependencies": {
     "dotenv": "^16.0.3",
+    "nodemon": "^2.0.22",
     "mongoose": "^7.0.1",
-    "qrcode-terminal": "^0.12.0",
     "whatsapp-web.js": "^1.19.4",
-    "wwebjs-mongo": "^1.1.0"
+    "wwebjs-mongo": "^1.1.0",
+    "qrcode-terminal": "^0.12.0"
   },
   "scripts": {
-    "start": "node test.js"
+    "start": "node test.js",
+    "dev": "nodemon test.js"
   }
 }
